--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TP1_DevAppMobiles_GwenaelGalliot</string>
+    <string name="app_name" translatable="false">TP1_DevAppMobiles_GwenaelGalliot</string>
 </resources>
